--- a/src/components/RichEditor/styles.css
+++ b/src/components/RichEditor/styles.css
@@ -2,8 +2,8 @@
     padding: 5px;
     box-sizing: border-box;
     border: 1px solid #000;
-    min-height: 300px;
     width: 1000px;
+    margin-bottom: 4px;
 }
 
 .link {
